--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "first-project-tota",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://johntekvalves.com/",  
+  "homepage": "https://johntekvalves.com/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,9 +15,14 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "fontawesome": "^5.6.3",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
+    "i18next-locize-backend": "^6.5.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
